--- a/app/src/main/res/layout/receive.xml
+++ b/app/src/main/res/layout/receive.xml
@@ -6,14 +6,25 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_marginLeft="5dp"
+        android:layout_marginLeft="3dp"
         android:layout_marginTop="5dp"
-        android:background="@drawable/btn_background">
+        >
+        <ImageView
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginLeft="1dp"
+            android:id="@+id/receiveImage"
+            android:src="@drawable/message_mysent"
+            android:padding="2dp"
+            android:layout_marginTop="2dp"/>
+
         <TextView
+            android:background="@drawable/btn_background"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/white"
             android:padding="10dp"
+            android:layout_marginLeft="40dp"
             android:id="@+id/txt_receive_message"
             android:text="This is receive message"
             android:textSize="18sp"/>
