User photo uploaded and shown in chat

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -35,12 +35,13 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_below="@id/edt_email"
+        android:layout_marginLeft="20dp"
         android:layout_marginTop="10dp"
         android:layout_marginRight="20dp"
-        android:layout_marginLeft="20dp"
+        android:background="@drawable/edt_background"
         android:hint="Password"
         android:paddingLeft="10dp"
-        android:background="@drawable/edt_background"/>
+        android:password="true" />
     <Button
         android:id="@+id/btnLogin"
         android:layout_width="100dp"
