--- a/app/src/main/res/layout/recycler_rowuser.xml
+++ b/app/src/main/res/layout/recycler_rowuser.xml
@@ -2,6 +2,12 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
+    <ImageView
+        android:layout_width="43dp"
+        android:layout_height="43dp"
+        android:layout_marginLeft="2dp"
+        android:id="@+id/rowuserImage"
+        android:layout_centerVertical="true"/>
     <TextView
         android:layout_marginTop="5dp"
         android:id="@+id/txt_namerow"
@@ -9,8 +15,9 @@
         android:layout_height="wrap_content"
         android:text="Efkan"
         android:textSize="30sp"
+        android:textColor="@color/black"
         android:textStyle="bold"
-        android:layout_marginLeft="10dp"
+        android:layout_marginLeft="60dp"
         />
     <View
         android:layout_width="match_parent"
